# face-detector-inference-playground

./: Cargo.toml  readme.md
src/: config.rs  main.rs
src/detection/: bbox.rs  mod.rs  model.rs  preprocessing.rs
src/drawing/: rectangle.rs
